# fastapi-cpp

./: .gitignore  BUILD.md  CMakeLists.txt  FUTURE_IMPLEMENTATIONS.md  FastApi-Cpp.code-workspace  LICENSE  README.md  SETUP_COMPLETE.md  build.bat  build.sh  core.cpp  dev.sh  fastapi_cpp.h  httplib.h
cmake/: FastAPI-CPPConfig.cmake.in
core/: binding.h  macros.h  params.h  response.h  router.h  server.h  validation.h
examples/: simple_example.cpp
include/: binding.hpp  connection_pool.hpp  db_config.hpp  fastapi_cpp.h  macros.hpp  mongo_primitives.hpp  params.hpp  postgres_primitives.hpp  redis_primitives.hpp  request.h  request.hpp  response.hpp  router.hpp  server.h  server.hpp  validation.hpp
src/: mongo_primitives.cpp  postgres_primitives.cpp  redis_primitives.cpp  request.cpp  response.cpp  router.cpp
